--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -8,3 +8,12 @@
   margin: 0;
   padding: 0 0 32px 0;
 }
+
+@media screen and (max-width: 767px) {
+  .cover__title {
+    max-width: 288px;
+    padding-bottom: 16px;
+    font-size: 32px;
+    line-height: calc(1 / 32 * 35);
+  }
+}
