--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -8,3 +8,11 @@
   padding: 0;
   margin: 0;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__copyright {
+    line-height: calc(1 / 14 * 14);
+    text-align: left;
+    padding-top: 48px;
+  }
+}
