--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -6,3 +6,11 @@
   margin: 0;
   justify-content: flex-start;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__links {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 32px;
+  }
+}
