--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,3 +4,24 @@
   justify-content: space-between;
   margin: 92px auto 24px;
 }
+
+@media screen and (max-width: 1279px) {
+  .footer {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .footer {
+    max-width: 720px;
+    margin-top: 88px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    max-width: 288px;
+    margin: 64px 16px 24px;
+    flex-direction: column;
+  }
+}
