--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -6,3 +6,10 @@
   gap: 18px;
   padding: 18px 0 6px;
 }
+
+@media screen and (max-width: 767px) {
+  .header__links {
+    padding-top: 14px;
+    padding-bottom: 8px;
+  }
+}
