--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,3 +4,22 @@
   justify-content: space-between;
   margin: 28px auto 0;
 }
+
+@media screen and (max-width: 1279px) {
+  .header {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .header {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    max-width: 288px;
+    margin-top: 16px;
+  }
+}
