--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -8,3 +8,9 @@
   font-size: 12px;
   line-height: calc(1 / 12 * 18);
 }
+
+@media screen and (max-width: 767px) {
+  .intro__list {
+    padding: 0 16px 0;
+  }
+}
