--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,3 +8,18 @@
   margin: 0;
   padding: 0 0 40px;
 }
+
+@media screen and (max-width: 1023px) {
+  .intro__title {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .intro__title {
+    max-width: 288px;
+    font-size: 32px;
+    line-height: calc(1 / 32 * 35);
+    padding: 0 16px 40px;
+  }
+}
