--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -5,3 +5,23 @@
   flex-direction: column;
   align-items: flex-start;
 }
+
+@media screen and (max-width: 1279px) {
+  .intro {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .intro {
+    max-width: 720px;
+    margin-top: 88px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .intro {
+    max-width: 320px;
+    margin-top: 64px;
+  }
+}
