--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,4 +7,22 @@
   text-align: center;
   margin: 0;
   padding: 0 0 64px;
+  max-width: 640px;
+  display: flex;
+  align-self: center;
+}
+
+@media screen and (max-width: 1279px) {
+  .lead__subtitle {
+    padding-bottom: 56px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__subtitle {
+    padding-bottom: 40px;
+    max-width: 288px;
+    font-size: 16px;
+    line-height: calc(1 / 16 * 20);
+  }
 }
