--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,4 +7,16 @@
   color: #fff;
   margin: 0;
   padding: 0 0 32px;
+  max-width: 720px;
+  display: flex;
+  align-self: center;
+}
+
+@media screen and (max-width: 767px) {
+  .lead__title {
+    max-width: 288px;
+    font-size: 40px;
+    line-height: calc(1 / 40 * 44);
+    padding-bottom: 16px;
+  }
 }
