--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -3,3 +3,21 @@
   flex-direction: column;
   gap: 26px;
 }
+
+@media screen and (max-width: 1279px) {
+  .place__paragraphs {
+    gap: 27px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .place__paragraphs {
+    gap: 25px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__paragraphs {
+    padding-top: 32px;
+  }
+}
