--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -8,3 +8,29 @@
   margin: 0;
   padding: 0 40px 48px 0;
 }
+
+@media screen and (max-width: 1279px) {
+  .place__title {
+    width: 440px;
+    padding-right: 32px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .place__title {
+    width: 340px;
+    padding-right: 28px;
+    font-size: 42px;
+    line-height: calc(1 / 42 * 46);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__title {
+    padding: 0 0 32px 0;
+    margin: 0 auto 0;
+    width: 288px;
+    font-size: 32px;
+    line-height: calc(1 / 32 * 35);
+  }
+}
