--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -3,4 +3,19 @@
   flex-direction: column;
   padding-bottom: 48px;
   justify-content: flex-end;
+  width: 456px;
+}
+
+@media screen and (max-width: 1023px) {
+  .place__website {
+    width: 352px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__website {
+    width: 288px;
+    padding-bottom: 32px;
+    margin: 0 auto 0;
+  }
 }
