--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,5 +1,5 @@
 .place {
-  max-width: 984px;
+  max-width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -8,4 +8,20 @@
 
 .place:last-of-type {
   padding-bottom: 0;
+}
+
+@media screen and (max-width: 1023px) {
+  .place {
+    padding-bottom: 73px;
+  }
+  .place:nth-of-type(4) {
+    padding-bottom: 75px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place {
+    padding-bottom: 50px;
+    flex-direction: column;
+  }
 }
