--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -19,7 +19,7 @@
   z-index: -1;
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: #2a2c2f;
   opacity: 0.3;
   transition: opacity 1s ease;
 }
