--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,21 +4,22 @@
   font-size: 72px;
   line-height: calc(1 / 72 * 76);
   color: #fff;
-  width: 460px;
+  max-width: 460px;
+  width: 100%;
   margin: 0;
   padding: 0 40px 48px 0;
 }
 
 @media screen and (max-width: 1279px) {
   .place__title {
-    width: 440px;
+    max-width: 440px;
     padding-right: 32px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .place__title {
-    width: 340px;
+    max-width: 340px;
     padding-right: 28px;
     font-size: 42px;
     line-height: calc(1 / 42 * 46);
@@ -29,7 +30,7 @@
   .place__title {
     padding: 0 0 32px 0;
     margin: 0 auto 0;
-    width: 288px;
+    max-width: 288px;
     font-size: 32px;
     line-height: calc(1 / 32 * 35);
   }
