--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -3,18 +3,19 @@
   flex-direction: column;
   padding-bottom: 48px;
   justify-content: flex-end;
-  width: 456px;
+  max-width: 456px;
+  width: 100%;
 }
 
 @media screen and (max-width: 1023px) {
   .place__website {
-    width: 352px;
+    max-width: 352px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .place__website {
-    width: 288px;
+    max-width: 288px;
     padding-bottom: 32px;
     margin: 0 auto 0;
   }
